# python-uv-template

./: pyproject.toml
